--- a/WEB_UI/Areas/IDSMORS/Views/Shared/_IDSMORS.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Shared/_IDSMORS.cshtml
@@ -30,6 +30,7 @@
     @RenderBody()
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jquery-cookie")
+    @Scripts.Render("~/bundles/jquery-ui")
     <!-- Bootstrap Core JavaScript -->
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
