auto search input

--- a/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
@@ -253,9 +253,9 @@
                         </div>
                         <div class="form-group col-xs-6">
                             <label for="station-wagon-edit">@IDSMORSResource.station_label:</label>
-                            <select class="form-control" id="station-wagon-edit">
-                            </select>
-                            @*<input type="text" class="form-control" id="station-wagon-edit" placeholder="">*@
+                            @*<select class="form-control" id="station-wagon-edit">
+                            </select>*@
+                            <input type="text" class="form-control" id="station-wagon-edit" placeholder="">
                         </div>
                     </div>
                     <div class="row">
