--- a/WEB_UI/Areas/IDSMORS/Views/Shared/_IDSMORS.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Shared/_IDSMORS.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- Bootstrap Core CSS -->
+    @Styles.Render("~/jquery-ui/css")
     @Styles.Render("~/bootstrap/css")
 
     <link rel="stylesheet" href="~/Content/view/shared/_idsmors.css"> <!-- CSS reset -->
