--- a/WEB_UI/Areas/IDSMORS/Views/Shared/_IDSMORS.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Shared/_IDSMORS.cshtml
@@ -24,7 +24,7 @@
                 <!-- inser more links here -->
                 <li><a href='@Url.Action("Index", "Home", new { area = "" })'>Home</a></li>
                 <li><a href='@Url.Action("Index", "Home", new { area = "IDSMORS" })'>ИДС"УСПС"</a></li>
-                <li><a id="new-project" href='#'>Добавить вагон</a></li>
+                <li><a id="new-item" href='#'>Добавить вагон</a></li>
             </ul>
         </nav> <!-- cd-main-nav -->
     </header>
