--- a/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
@@ -57,7 +57,9 @@
                     <div class="form-group row">
                         <div class="offset-sm-2 col-sm-12">
                             <button type="button" id="bt-info-edit" class="btn btn-primary wagon-info-view">@IDSMORSResource.bt_edit_text</button>
+                            <button type="button" id="bt-info-delete" class="btn btn-primary wagon-info-view">@IDSMORSResource.bt_delete_text</button>
                             <button type="button" id="bt-repairs-edit" class="btn btn-primary wagon-repairs-view">@IDSMORSResource.bt_edit_text</button>
+
                             <button type="button" id="bt-info-save" class="btn btn-primary wagon-info-edit">Сохранить</button>
                             <button type="button" id="bt-repairs-save" class="btn btn-primary wagon-repairs-edit">Сохранить</button>
                             <button type="button" id="bt-info-cancel" class="btn btn-primary wagon-info-edit">Отмена</button>
