start repairs edit

--- a/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
+++ b/WEB_UI/Areas/IDSMORS/Views/Home/ElectronicCards.cshtml
@@ -468,31 +468,55 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="form-group col-xs-4">
-                                <label for="cur-date-wagons-repairs-view">Дата:</label>
-                                <input type="text" class="form-control" id="cur-date-wagons-repairs-view" placeholder="" disabled>
+                            <div class="form-group col-xs-4 has-feedback">
+                                <label for="date-wagons-repairs-edit" class="control-label">Дата:</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                    <input type="text" class="form-control" id="date-wagons-repairs-edit" name="date-wagons-repairs-edit" placeholder="">
+                                    <span class=" glyphicon form-control-feedback"></span>
+                                </div>
                             </div>
-                            <div class="form-group col-xs-4">
-                                <label for="cur-internal-railroad-wagons-repairs-view">Дорога:</label>
-                                <input type="text" class="form-control" id="cur-internal-railroad-wagons-repairs-view" placeholder="" disabled>
+                            <div class="form-group col-xs-4 has-feedback">
+                                <label for="internal-railroad-wagons-repairs-edit" class="control-label">Дорога:</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-list"></i></span>
+                                    <select class="form-control" id="internal-railroad-wagons-repairs-edit" name="internal-railroad-wagons-repairs-edit" required="required"></select>
+                                    <span class=" glyphicon form-control-feedback"></span>
+                                </div>
                             </div>
-                            <div class="form-group col-xs-4">
-                                <label for="cur-code-depo-wagons-repairs-view">ВРП(депо):</label>
-                                <input type="text" class="form-control" id="cur-code-depo-wagons-repairs-view" placeholder="" disabled>
+                            <div class="form-group col-xs-4 has-feedback">
+                                <label for="code-depo-wagons-repairs-edit" class="control-label">ВРП(депо):</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-list"></i></span>
+                                    <select class="form-control" id="code-depo-wagons-repairs-edit" name="code-depo-wagons-repairs-edit" required="required"></select>
+                                    <span class=" glyphicon form-control-feedback"></span>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="form-group col-xs-4">
-                                <label for="cur-type-wagons-repairs-view">Вид ремонта:</label>
-                                <input type="text" class="form-control" id="cur-type-wagons-repairs-view" placeholder="" disabled>
+                            <div class="form-group col-xs-4 has-feedback">
+                                <label for="type-wagons-repairs-edit" class="control-label">Вид ремонта:</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                    <input type="text" class="form-control" id="type-wagons-repairs-edit" name="type-wagons-repairs-edit" placeholder="" >
+                                    <span class=" glyphicon form-control-feedback"></span>
+                                </div>
                             </div>
-                            <div class="form-group col-xs-4">
-                                <label for="cur-date-non-working-wagons-repairs-view">Дата постановки в нер. парк:</label>
-                                <input type="text" class="form-control" id="cur-date-non-working-wagons-repairs-view" placeholder="" disabled>
+                            <div class="form-group col-xs-4 has-feedback">
+                                <label for="date-non-working-wagons-repairs-edit" class="control-label">Дата постановки в нер. парк:</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                    <input type="text" class="form-control" id="date-non-working-wagons-repairs-edit" name="date-non-working-wagons-repairs-edit" placeholder="">
+                                    <span class=" glyphicon form-control-feedback"></span>
+                                </div>
                             </div>
-                            <div class="form-group col-xs-4">
-                                <label for="cur-condition-wagons-repairs-view">Неисправность:</label>
-                                <input type="text" class="form-control" id="cur-condition-wagons-repairs-view" placeholder="" disabled>
+                            <div class="form-group col-xs-4 has-feedback">
+                                <label for="condition-wagons-repairs-edit" class="control-label">Неисправность:</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                    <input type="text" class="form-control" id="condition-wagons-repairs-edit" name="condition-wagons-repairs-edit" placeholder="" >
+                                    <span class=" glyphicon form-control-feedback"></span>
+                                </div>
                             </div>
                         </div>
                     </div>
